@@ -2130,7 +2130,7 @@ class Article {
 
 			if ( $wgUser->isAllowed( 'editinterface' ) ) {
 				$skin = $wgUser->getSkin();
-				$link = $skin->makeLink ( 'MediaWiki:deletereason-dropdown', wfMsgHtml( 'delete-edit-reasonlist' ) );
+				$link = $skin->makeLink ( 'MediaWiki:Deletereason-dropdown', wfMsgHtml( 'delete-edit-reasonlist' ) );
 				$form .= '<p class="mw-delete-editreasons">' . $link . '</p>';
 			}
 
